fixing white space in mobile

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -289,7 +289,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 35px;
+  width: 25px;
   height: auto;
   margin: 10px 20px;
 }
