--- a/src/index.css
+++ b/src/index.css
@@ -131,11 +131,7 @@ table {
 body {
   background-image: linear-gradient(180deg, #52acff 25%, #ffe32c 100%);
   background-repeat: no-repeat;
-}
-
-html,
-body {
-  width: 100%;
+  background-size: 100% 100%;
   height: 100%;
-  overflow-x: hidden;
+  width: 100%;
 }
